# sitelytics

./: .dockerignore  .gitignore  Cargo.toml  README.md  clippy.toml
etc/deploy/: Dockerfile
frontend/: index.html  package.json  pnpm-lock.yaml  rsbuild.config.ts  tsconfig.server.json
frontend/scripts/: build-server.ts
frontend/server/: dev.ts  html-template.ts  index.ts  ssr-handler.ts
frontend/src/: entry-client.tsx  entry-server.tsx  index.css  routes.tsx  types.ts
frontend/src/components/: DayButton.tsx  Sparkline.tsx  StatCard.tsx  ThemeToggle.tsx
frontend/src/lib/: api.ts  chart.ts  format.ts  theme.ts
frontend/src/pages/: Dashboard.tsx  Detail.tsx  Login.tsx
src/: api.rs  app.rs  lib.rs  main.rs
src/pages/: dashboard.rs  detail.rs  login.rs  mod.rs
style/: main.css
website/: package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.server.json  vite.config.ts
website/etc/k8s/: Dockerfile  deployment.yaml  ingress.yaml  service.yaml  skaffold.yaml
website/public/: robots.txt
website/server/: dev.ts  html-template.ts  index.ts  ssr-handler.ts
website/src/: cdn.ts  entry-client.tsx  entry-server.tsx  index.css  routes.tsx
website/src/components/: Layout.tsx  SEOHead.tsx
website/src/pages/: FeaturesPage.tsx  HomePage.tsx
