[package]
name = "sitelytics"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sitelytics"
path = "src/main.rs"
required-features = ["ssr"]

[dependencies]
leptos = { version = "0.8" }
leptos_axum = { version = "0.8", optional = true }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
thiserror = "2"

# SSR deps
axum = { version = "0.8", optional = true }
axum-extra = { version = "0.10", features = ["cookie"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
base64 = { version = "0.22", optional = true }
urlencoding = "2"

# Client deps
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
hydrate = [
  "leptos/hydrate",
  "dep:wasm-bindgen",
  "dep:console_error_panic_hook",
]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_axum",
  "dep:axum",
  "dep:axum-extra",
  "dep:tokio",
  "dep:tower",
  "dep:tower-http",
  "dep:reqwest",
  "dep:base64",
]

[package.metadata.leptos]
output-name = "sitelytics"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
site-addr = "0.0.0.0:19000"
reload-port = 19001
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
needless_pass_by_value = "deny"
unnecessary_mut_passed = "deny"
too_many_lines = "warn"
cognitive_complexity = "warn"
excessive_nesting = "warn"
clone_on_ref_ptr = "warn"
manual_let_else = "warn"
redundant_closure_for_method_calls = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
semicolon_if_nothing_returned = "warn"
unused_self = "warn"
single_match_else = "warn"
manual_string_new = "warn"
needless_continue = "warn"
match_wildcard_for_single_variants = "warn"
inconsistent_struct_constructor = "warn"
unnested_or_patterns = "warn"
trivially_copy_pass_by_ref = "warn"
map_unwrap_or = "warn"
