[package]
name = "sitelytics"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sitelytics"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
thiserror = "2"
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
urlencoding = "2"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
needless_pass_by_value = "deny"
unnecessary_mut_passed = "deny"
too_many_lines = "warn"
cognitive_complexity = "warn"
excessive_nesting = "warn"
clone_on_ref_ptr = "warn"
manual_let_else = "warn"
redundant_closure_for_method_calls = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
semicolon_if_nothing_returned = "warn"
unused_self = "warn"
single_match_else = "warn"
manual_string_new = "warn"
needless_continue = "warn"
match_wildcard_for_single_variants = "warn"
inconsistent_struct_constructor = "warn"
unnested_or_patterns = "warn"
trivially_copy_pass_by_ref = "warn"
map_unwrap_or = "warn"
